// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SidebarSection /> renders as expected for not selected section 1`] = `
<NavLink
  activeClassName="iap-management-sidebar__section--active"
  aria-current="page"
  className="iap-management-sidebar__section"
  exact={true}
  to="/management/section"
>
  <mockConstructor
    active={false}
  />
  <span>
    Section
  </span>
</NavLink>
`;

exports[`<SidebarSection /> renders as expected for selected section 1`] = `
<NavLink
  activeClassName="iap-management-sidebar__section--active"
  aria-current="page"
  className="iap-management-sidebar__section"
  exact={true}
  to="/management/section"
>
  <mockConstructor
    active={true}
  />
  <span>
    Section
  </span>
</NavLink>
`;
